--- a/public/index.html
+++ b/public/index.html
@@ -8,8 +8,9 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Yassine TAKEDDINE Full Stack JavaScript Developer | Astronomie enthusiast"
     />
+    <meta name="keywords" content="Yassine, Yassine TAKEDDINE, Takeddine" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/chakra.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -25,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Yassine TAKEDDINE</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
