--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,9 @@
       content="Yassine TAKEDDINE Full Stack JavaScript Developer | Astronomie enthusiast"
     />
     <meta name="keywords" content="Yassine, Yassine TAKEDDINE, Takeddine" />
+    <meta name="robots" content="index, follow">
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+<meta name="language" content="English">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/chakra.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
